--- a/docroot/css/screen.css
+++ b/docroot/css/screen.css
@@ -251,7 +251,7 @@ p {padding: 5px 0;}
 }
 
 .CHPTitle {
-	font-size: 60px;
+	font-size: 55px;
 	padding-top: 50px;
 }
 
@@ -265,7 +265,8 @@ p {padding: 5px 0;}
 	border-color: #C0C2C5;
 	margin: 0;
 	border-radius: 4px;
-	height: 1000px;
+	height: 100%;
+	min-height: 1000px;
 	color: #eb8f00;
 	font-family: Verdana;
 }
